// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maxAsyncDownloadTimeDiff global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 257.010208932977,
              "initialDownloadTime": 245.16457005550987,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 248.0155543277138,
              "initialDownloadTime": 245.16457005550987,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 8.994654605263158,
                "ok": false,
                "percent": 315.4929577464788,
              },
              "downloadTime": Object {
                "absolute": 8.994654605263179,
                "ok": true,
                "percent": 3.626649396907644,
              },
              "initialDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of async assets is 9 ms (315.49%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTimeDiff not match - global 1`] = `Array []`;

exports[`maxAsyncDownloadTimeDiff not match - override global 1`] = `Array []`;

exports[`maxAsyncDownloadTimeDiff override global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 257.010208932977,
              "initialDownloadTime": 245.16457005550987,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 248.0155543277138,
              "initialDownloadTime": 245.16457005550987,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 8.994654605263158,
                "ok": false,
                "percent": 315.4929577464788,
              },
              "downloadTime": Object {
                "absolute": 8.994654605263179,
                "ok": true,
                "percent": 3.626649396907644,
              },
              "initialDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of async assets is 9 ms (315.49%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncDownloadTimeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 608.926070363898,
              "initialDownloadTime": 584.8332455283717,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 249.34065969366776,
              "initialDownloadTime": 246.4896754214638,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 21.24184056332237,
                "ok": false,
                "percent": 745.0704225352114,
              },
              "downloadTime": Object {
                "absolute": 359.58541067023026,
                "ok": true,
                "percent": 144.21451002496175,
              },
              "initialDownloadTime": Object {
                "absolute": 338.34357010690786,
                "ok": true,
                "percent": 137.26480410523743,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of async assets is 21 ms (745.07%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 257.010208932977,
              "initialDownloadTime": 245.16457005550987,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 248.0155543277138,
              "initialDownloadTime": 245.16457005550987,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 8.994654605263158,
                "ok": true,
                "percent": 315.4929577464788,
              },
              "downloadTime": Object {
                "absolute": 8.994654605263179,
                "ok": false,
                "percent": 3.626649396907644,
              },
              "initialDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of assets is 9 ms (3.63%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff not match - global 1`] = `Array []`;

exports[`maxDownloadTimeDiff not match - override global 1`] = `Array []`;

exports[`maxDownloadTimeDiff override global 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 11.845638877467104,
              "downloadTime": 257.010208932977,
              "initialDownloadTime": 245.16457005550987,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 248.0155543277138,
              "initialDownloadTime": 245.16457005550987,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 8.994654605263158,
                "ok": true,
                "percent": 315.4929577464788,
              },
              "downloadTime": Object {
                "absolute": 8.994654605263179,
                "ok": false,
                "percent": 3.626649396907644,
              },
              "initialDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of assets is 9 ms (3.63%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxDownloadTimeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 167.60575143914474,
              "initialDownloadTime": 167.60575143914474,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 16.041805869654606,
              "initialDownloadTime": 16.041805869654606,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 151.56394556949013,
                "ok": false,
                "percent": 944.8060075093867,
              },
              "initialDownloadTime": Object {
                "absolute": 151.56394556949013,
                "ok": true,
                "percent": 944.8060075093867,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of assets is 152 ms (944.81%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 608.926070363898,
              "initialDownloadTime": 584.8332455283717,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 249.34065969366776,
              "initialDownloadTime": 246.4896754214638,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 21.24184056332237,
                "ok": true,
                "percent": 745.0704225352114,
              },
              "downloadTime": Object {
                "absolute": 359.58541067023026,
                "ok": false,
                "percent": 144.21451002496175,
              },
              "initialDownloadTime": Object {
                "absolute": 338.34357010690786,
                "ok": true,
                "percent": 137.26480410523743,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
              "maxInitialDownloadTimeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of assets is 360 ms (144.21%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialDownloadTimeDiff global 1`] = `Array []`;

exports[`maxInitialDownloadTimeDiff not match - global 1`] = `Array []`;

exports[`maxInitialDownloadTimeDiff not match - override global 1`] = `Array []`;

exports[`maxInitialDownloadTimeDiff override global 1`] = `Array []`;

exports[`maxInitialDownloadTimeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 167.60575143914474,
              "initialDownloadTime": 167.60575143914474,
            },
            "before": Object {
              "asyncDownloadTime": 0,
              "downloadTime": 16.041805869654606,
              "initialDownloadTime": 16.041805869654606,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "downloadTime": Object {
                "absolute": 151.56394556949013,
                "ok": true,
                "percent": 944.8060075093867,
              },
              "initialDownloadTime": Object {
                "absolute": 151.56394556949013,
                "ok": false,
                "percent": 944.8060075093867,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download time diff of initial assets is 152 ms (944.81%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "9eb9a218218f1ee4ba40",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncDownloadTime": 24.09282483552632,
              "downloadTime": 608.926070363898,
              "initialDownloadTime": 584.8332455283717,
            },
            "before": Object {
              "asyncDownloadTime": 2.8509842722039473,
              "downloadTime": 249.34065969366776,
              "initialDownloadTime": 246.4896754214638,
            },
            "compilation": "9eb9a218218f1ee4ba40",
            "diff": Object {
              "asyncDownloadTime": Object {
                "absolute": 21.24184056332237,
                "ok": true,
                "percent": 745.0704225352114,
              },
              "downloadTime": Object {
                "absolute": 359.58541067023026,
                "ok": true,
                "percent": 144.21451002496175,
              },
              "initialDownloadTime": Object {
                "absolute": 338.34357010690786,
                "ok": false,
                "percent": 137.26480410523743,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncDownloadTimeDiff": Infinity,
              "maxDownloadTimeDiff": Infinity,
              "maxInitialDownloadTimeDiff": Object {
                "number": 1,
                "type": "absolute",
              },
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download time diff of initial assets is 338 ms (137.26%). It's over the 1 ms limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
